--- a/corporate.html
+++ b/corporate.html
@@ -62,7 +62,11 @@
             CORPORATE
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownCorporate">
-            <li><a class="dropdown-item" href="corporate.html">CORPORATE</a></li>
+            <li><a class="dropdown-item" href="corporate.html#content">CONTENT</a></li>
+            <li><a class="dropdown-item" href="corporate.html#production">PRODUCTION</a></li>
+            <li><a class="dropdown-item" href="corporate.html#marketing">MARKETING</a></li>
+            <li><a class="dropdown-item" href="corporate.html#management">MANAGEMENT</a></li>
+            <li><a class="dropdown-item" href="corporate.html#appendix">APPENDIX</a></li>
           </ul>
         </li>
       </ul>
@@ -128,7 +132,7 @@
           <!-- End General -->
 
           <!-- Start Content -->
-          <h2 class="heading-corporate">Content</h2>
+          <h2 id="content" class="heading-corporate">Content</h2>
           <p class="body-text-corporate">Please clarify here the match between students and pieces of content. Make sure that you provide a <u>link</u> to the correct page within the website</p>
           <table class="table table-bordered table-striped table-content">
             <thead>
@@ -203,16 +207,26 @@
           <br>
           <br>
           <h4  class="body-text-corporate"><i><b>Style Guide and Visual Identity:</b></i></h4>
-          <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
-          <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGBdqRMZZw&#x2F;LoDYYep0Ct7D-Dz_K9cmxQ&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+          <p class="heading-corporate">PERSONA:</p>
+          <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGAI9HdKrs&#x2F;H-yOlBe2xIjbg7J1O8JYVA&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGBdqRMZZw&#x2F;LoDYYep0Ct7D-Dz_K9cmxQ&#x2F;view?utm_content=DAGBdqRMZZw&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Click here if not loading.</a>
+  <br>
+  <br>
+  <p class="heading-corporate">STYLE GUIDE:</p>
+  <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGBdqRMZZw&#x2F;D5syB6uKoyRiZwxlqaqqsw&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGBdqRMZZw&#x2F;D5syB6uKoyRiZwxlqaqqsw&#x2F;view?utm_content=DAGBdqRMZZw&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">STYLE GUIDE</a>    
 <br>
-<br>
-          <h4  class="body-text-corporate"><i>Brand Vision</i></h4>
-          <p class="body-text-corporate"><b>In an info-saturated age, linking up with fellow headbangers feels boundless yet rare. Hard rock fans should be able to easily come together to amplify their concert thrills, synchronize their music tastes, and rock out together. Only then can real connections be made in our big, loud world.</b></p>
-          <a  class="nav-link-corporate" href="appendix/persona.pdf">See Appendix 1 for the Persona</a>
           <br>
           <h4  class="body-text-corporate"><i>Supporting Visuals</i></h4>
           <div class="container-content my-0">
@@ -504,9 +518,20 @@
         <br>
           <!-- End Production, start Marketing -->
           
-         <div class="body-text-corporate">
-          <h2 id="marketing" class="heading-corporate">Marketing</h2>
-          <a  class="nav-link-corporate" href="appendix/persona.pdf">See Appendix 1 for the Persona</a>
+         <div id="marketing" class="body-text-corporate">
+          <h2 class="heading-corporate">Marketing</h2>
+          <br>
+          <br>
+          <p class="heading-corporate">PERSONA:</p>
+          <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGAI9HdKrs&#x2F;H-yOlBe2xIjbg7J1O8JYVA&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGAI9HdKrs&#x2F;H-yOlBe2xIjbg7J1O8JYVA&#x2F;view?utm_content=DAGAI9HdKrs&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">PRJ4 Personas</a> 
+          <br>
           <br>
           <h4 id="marketing-1" class="heading-corporate-1">Context of campaign and promotional activities</h4>
           <p>Amplify is a brand that strives to connect rock fans through concerts and amplify their experience. We are a service that offers rock fans the chance to connect with other rock fans alike them and go to concerts around The Netherlands. From the conducted interviews with our target audience we found out that:
@@ -777,7 +802,7 @@
            <img class="img-fluid" src="images/marketing-posts-upcoming.JPG" alt="Placeholder Image">
             <div class="card-body">
              <h5 class="card-title">Carousel introducing app features</h5>
-             <p class="card-text">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
+             <p class="card-text">This carousel post introduced the main features of our app. This raised awareness about our product. We included a sneak peek of our app so the audience can be excited for the launch of the product.</p>
             </div>
           <div class="card-footer p-2 text-end">
         <a href="https://www.instagram.com/amplifynetherlands/" class="btn btn-primary-marketing">Learn more</a>
@@ -792,7 +817,7 @@
            <img class="img-fluid" src="images/marketing-post-profile.JPG" alt="Placeholder Image">
             <div class="card-body">
              <h5 class="card-title">Carousel introducing app features</h5>
-             <p class="card-text">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
+             <p class="card-text">This carousel post introduced the main features of our app. This raised awareness about our product. We included a sneak peek of our app so the audience can be excited for the launch of the product.</p>
             </div>
           <div class="card-footer p-2 text-end">
         <a href="https://www.instagram.com/amplifynetherlands/" class="btn btn-primary-marketing">Learn more</a>
@@ -806,7 +831,7 @@
            <img class="img-fluid" src="images/marketing-post-chats.JPG" alt="Placeholder Image">
             <div class="card-body">
              <h5 class="card-title">Carousel introducing app features</h5>
-             <p class="card-text">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
+             <p class="card-text">This carousel post introduced the main features of our app. This raised awareness about our product. We included a sneak peek of our app so the audience can be excited for the launch of the product.</p>
             </div>
           <div class="card-footer p-2 text-end">
         <a href="https://www.instagram.com/amplifynetherlands/" class="btn btn-primary-marketing">Learn more</a>
@@ -1268,8 +1293,6 @@
           </div>
                 </div>
          </div>
-        </div>
-      </div>
           </main>
 <!-- Start of Footer -->
 <footer class="footer">
