--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
             CORPORATE
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownCorporate">
-            <li><a class="dropdown-item" href="corporate.html">CORPORATE</a></li>
+            <li><a class="dropdown-item" href="corporate.html#content">CONTENT</a></li>
+            <li><a class="dropdown-item" href="corporate.html#production">PRODUCTION</a></li>
+            <li><a class="dropdown-item" href="corporate.html#marketing">MARKETING</a></li>
+            <li><a class="dropdown-item" href="corporate.html#management">MANAGEMENT</a></li>
+            <li><a class="dropdown-item" href="corporate.html#appendix">APPENDIX</a></li>
           </ul>
         </li>
       </ul>
@@ -108,17 +112,19 @@
   </div>
 </div>
 
-<div class="container-fluid-features my-0 bg-purple1">
-  <div class="row justify-content-center align-items-center flex-column-reverse-mobile">
-    <!-- Text Column -->
-    <div class="col-12 text-center text-container-mobile mb-3"> <!-- Adăugat mb-3 pentru a adăuga spațiu sub text -->
-      <h1 class="features-heading-text">ROCK OUT IN A DUET OR UNLEASH THE POWER OF A CROWD</h1>
-      <p class="features-body-text">Reveal your personal style on Amplify by personalising your profile. How do you prefer to rock out? In a massive mosh pit with fellow headbangers, or in a more intimate setting? Are you all about the high energy of the pit, or do you lean towards a more laid-back vibe?</p>
+<div class="container-fluid-features my-0 bg-purple1 text-center">
+  <div class="row justify-content-center align-items-center flex-column-reverse flex-md-row">
+    <!-- Text Column for Mobile First: It stacks on top when in mobile view -->
+    <div class="col-12 col-md-4 d-flex flex-column justify-content-center align-items-center text-column-mobile">
+      <h2 class="features-heading-text">ROCK OUT IN A DUET OR UNLEASH THE POWER OF A CROWD</h2>
+      <br>
+      <p class="features-body-text"> Reveal your personal style on Amplify by personalising your profile. How do you prefer to rock out? In a massive mosh pit with fellow headbangers, or in a more intimate setting? Are you all about the high energy of the pit, or do you lean towards a more laid-back vibe?
+      </p>
     </div>
-   <!-- Image Column -->
-<div class="col-12 col-md-8 text-md-center text-left text-column-desktop">
-  <img src="images/PRJ4_Mockup3.png" alt="Descriptive Alt Text" class="img-size-desktop img-fluid">
-</div>
+    <!-- Image Column -->
+    <div class="col-12 col-md-4 text-center">
+      <img src="images/screen-profile.png" alt="Descriere relevantă" class="img-size img-fluid">
+    </div>
   </div>
 </div>
 
@@ -129,7 +135,7 @@
     <div class="col-12 mx-auto py-5">
       <h1 class="display-3 features-heading-text">UNLEASH THE AMPLIFIED CONCERT EXPERIENCE:</h1>
       <div class="mt-3 mt-md-5">
-        <img src="images/appstore-badge.svg">
+        <img class="img-size-desktop img-fluid" src="images/appstore-badge.svg">
       </div>
         <div>
         <img src="images/google-play-badge.png" class="google-play-badge">
