--- a/our-story.html
+++ b/our-story.html
@@ -58,7 +58,11 @@
             CORPORATE
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownCorporate">
-            <li><a class="dropdown-item" href="corporate.html">CORPORATE</a></li>
+            <li><a class="dropdown-item" href="corporate.html#content">CONTENT</a></li>
+            <li><a class="dropdown-item" href="corporate.html#production">PRODUCTION</a></li>
+            <li><a class="dropdown-item" href="corporate.html#marketing">MARKETING</a></li>
+            <li><a class="dropdown-item" href="corporate.html#management">MANAGEMENT</a></li>
+            <li><a class="dropdown-item" href="corporate.html#appendix">APPENDIX</a></li>
           </ul>
         </li>
       </ul>
@@ -118,7 +122,7 @@
   <div class="row">
       <!-- Carousel Left -->
       <div class="col-md-6">
-          <div id="carouselLeft" class="carousel-slide" data-bs-interval="6000">
+          <div id="carouselLeft" class="carousel-slide" data-bs-interval="15000">
               <div class="carousel-inner">
                   <div class="carousel-item active">
                       <img src="images/caroll.jpg" class="d-block w-100" alt="Slide 1 Left">
@@ -137,19 +141,19 @@
       </div>
       <!-- Carousel Right -->
       <div class="col-md-6">
-          <div id="carouselRight" class="carousel-slide" data-bs-interval="6000">
+          <div id="carouselRight" class="carousel-slide" data-bs-interval="15000">
               <div class="carousel-inner">
                   <div class="carousel-item active">
-                      <img src="images/about-us.jpg" class="d-block w-100" alt="Slide 1 Right">
+                      <img src="images/quote-caroll.png" class="d-block w-100" alt="Slide 1 Right">
                   </div>
                   <div class="carousel-item">
-                      <img src="images/about-us.jpg" class="d-block w-100" alt="Slide 2 Right">
+                      <img src="images/quote-lars.png" class="d-block w-100" alt="Slide 2 Right">
                   </div>
                   <div class="carousel-item">
-                      <img src="images/about-us.jpg" class="d-block w-100" alt="Slide 3 Right">
+                      <img src="images/quote-atina.png" class="d-block w-100" alt="Slide 3 Right">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/about-us.jpg" class="d-block w-100" alt="Slide 4 Right">
+                    <img src="images/quote-ana.png" class="d-block w-100" alt="Slide 4 Right">
                 </div>
               </div>
           </div>
@@ -169,19 +173,19 @@
           <br>
       <div class="row">
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" data-bs-content="Through our differences, hard rock connects us all. Everything is better when we can experience the raw, unfiltered thrill of live music together. Amplify strives to help form these connections with other fans, creating unforgettable memories." 
+          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red popover-change-font" data-bs-toggle="popover" data-bs-content="Through our differences, hard rock connects us all. Everything is better when we can experience the raw, unfiltered thrill of live music together. Amplify strives to help form these connections with other fans, creating unforgettable memories." 
           data-bs-placement="bottom">FORMING CONNECTIONS</button>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" data-bs-content="Laughing until it hurts with your friends, seeing your favorite rock star front row at a concert, saying yes to everything that makes your heart rush, chasing your dreams without stopping at nothing. This is what living life to the fullest means to us. Leave no room for regrets, only unforgettable moments. " 
+          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red popover-change-font-special" data-bs-toggle="popover" data-bs-content="Laughing until it hurts with your friends, seeing your favorite rock star front row at a concert, saying yes to everything that makes your heart rush, chasing your dreams without stopping at nothing. This is what living life to the fullest means to us. Leave no room for regrets, only unforgettable moments. " 
           data-bs-placement="bottom">LIVING LIFE TO THE FULLEST</button>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" data-bs-content=" Your voice is your right to think, to dream, to question. We believe that everyone should be able to express themselves freely and without fear. Dare to be yourself. No one is like you. That is your power." 
+          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red popover-change-font" data-bs-toggle="popover" data-bs-content=" Your voice is your right to think, to dream, to question. We believe that everyone should be able to express themselves freely and without fear. Dare to be yourself. No one is like you. That is your power." 
           data-bs-placement="bottom">DARE TO BE YOU</button>
         </div>
         <div class="col-md-3">
-          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red" data-bs-toggle="popover" data-bs-content="What’s life if not a chase of those electrifying, adrenaline-pumping moments? Picture the raw power of that first chord, the uncontrollable urge to headbang, the gritty roar of the live guitar, and the energy of the encore. Words can’t scratch the surface; we can only feel the thrill course through our veins. Concerts are our very core. We’re chasing thrills, not counting days. " 
+          <button type="button" class="btn btn-lg btn-danger w-100 popover-trigger popover-red popover-change-font" data-bs-toggle="popover" data-bs-content="What’s life if not a chase of those electrifying, adrenaline-pumping moments? Picture the raw power of that first chord, the uncontrollable urge to headbang, the gritty roar of the live guitar, and the energy of the encore. Words can’t scratch the surface; we can only feel the thrill course through our veins. Concerts are our very core. We’re chasing thrills, not counting days. " 
           data-bs-placement="bottom">ADRENALINE RUSH</button>
         </div>
       </div>
@@ -274,7 +278,7 @@
           carouselRight.next(); 
       }
   
-      setInterval(advanceCarousels, 6000);
+      setInterval(advanceCarousels, 15000);
       
       // Popover 
       var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
