--- a/our-story.html
+++ b/our-story.html
@@ -121,6 +121,7 @@
 <div class="container-fluid">
   <div class="row">
       <!-- Carousel Left -->
+      <h2 class="our-team">OUR TEAM</h2>
       <div class="col-md-6">
           <div id="carouselLeft" class="carousel-slide" data-bs-interval="15000">
               <div class="carousel-inner">
