--- a/our-story.html
+++ b/our-story.html
@@ -204,6 +204,7 @@
     </div>
   </div>
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    <h2 class="visually-hidden">Footer</h2> 
       <div class="me-5 d-none d-lg-block footer-item footer-text">
           <span><strong>CHECK OUT OUR SOCIALS:</strong></span>
       </div>
@@ -216,7 +217,7 @@
         </a>
       </div>            
   </section>
-  <section class="">
+  <section>
       <div class="container text-center text-md-start mt-5">
           <div class="row mt-3">
               <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
