--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <!--Start of the content-->
     <div class="container-content my-0">
       <video autoplay muted loop id="myVideo">
-        <source src="images/EDITED-landingpage placeholder.mp4" type="video/mp4">
+        <source src="images/landing-page-video.mp4" type="video/mp4">
         Browserul tău nu suportă elementul video.
       </video>
       <a href="#our-features" class="btn btn-lg btn-danger m-1 d-block d-sm-inline btn-primary-landing">Learn More!</a>
@@ -135,10 +135,10 @@
     <div class="col-12 mx-auto py-5">
       <h1 class="display-3 features-heading-text">UNLEASH THE AMPLIFIED CONCERT EXPERIENCE:</h1>
       <div class="mt-3 mt-md-5">
-        <img class="img-size-desktop img-fluid" src="images/appstore-badge.svg">
+        <img class="img-size-desktop img-fluid" src="images/appstore-badge.svg" alt="Appstore badge">
       </div>
         <div>
-        <img src="images/google-play-badge.png" class="google-play-badge">
+        <img src="images/google-play-badge.png" class="google-play-badge" alt="Google Play badge">
       </div>
     </div>
   </div>
