--- a/our-story.html
+++ b/our-story.html
@@ -126,16 +126,16 @@
           <div id="carouselLeft" class="carousel-slide" data-bs-interval="15000">
               <div class="carousel-inner">
                   <div class="carousel-item active">
-                      <img src="images/caroll.jpg" class="d-block w-100" alt="Slide 1 Left">
+                      <img src="images/caroll.png" class="d-block w-100" alt="Slide 1 Left">
                   </div>
                   <div class="carousel-item">
-                      <img src="images/lars.jpg" class="d-block w-100" alt="Slide 2 Left">
+                      <img src="images/lars.png" class="d-block w-100" alt="Slide 2 Left">
                   </div>
                   <div class="carousel-item">
-                      <img src="images/atina.jpg" class="d-block w-100" alt="Slide 3 Left">
+                      <img src="images/atina.png" class="d-block w-100" alt="Slide 3 Left">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/ana.jpg" class="d-block w-100" alt="Slide 4 Left">
+                    <img src="images/ana.png" class="d-block w-100" alt="Slide 4 Left">
                 </div>
               </div>
           </div>
