production justifications update

--- a/corporate.html
+++ b/corporate.html
@@ -133,7 +133,6 @@
 
           <!-- Start Content -->
           <h2 id="content" class="heading-corporate">Content</h2>
-          <p class="body-text-corporate">Please clarify here the match between students and pieces of content. Make sure that you provide a <u>link</u> to the correct page within the website</p>
           <table class="table table-bordered table-striped table-content">
             <thead>
               <tr class="bg-white">
@@ -317,12 +316,30 @@
               </em>
               <br>
               <br>
-              <em><b>5.	Landing Page grid</b>
-                -the purple grid form the landing page serves an organized yet pleasing to the users’ eyes way to present information. The grid allows to present information in a simple, structured and direct way. 
-                </em>
+              <a href="index.html" class="nav-link-corporate" ><b>5.	Landing Page grid</b>
+              </a>
+              <li>The purple grid form the landing page serves an organized yet pleasing to the users’ eyes way to present information. The grid allows to present information in a simple, structured and direct way. 
+              </li>
                 <br>
                 <br>
-          
+              <a href="our-story.html"  class="nav-link-corporate" ><b>Our Story page grid</b></a>
+              <li>The design of the website makes use of strong color contrasts, bold text, and iconic imagery that speak to the passion and sense of community that characterize hard rock culture. Bright calls to action and interactive features, such as social media connections, involve people immediately and create a feeling of community and involvement similar to attending a concert in person. The overall look, which consists of dark tones broken up by flashes of color, is reminiscent of the hard rock movement's edgy, rebellious spirit. This effectively appeals to the fervent fan base of the genre and invites people to "amplify" their live experiences together.
+              </li>
+              <br>
+              <br>
+              <a href="our-story.html"  class="nav-link-corporate" ><b>Our Vision section</b></a>
+              <li>The page section offers a bold, simplistic style that perfectly encapsulates the mood of hard rock. As an anchor, the title "OUR VISION" makes a strong declaration that establishes the tone for the content that follows. The writing style of the text is casual and lively, reflecting the genuine and casual way that hard rock fans may interact. The lettering is expressive and a little asymmetrical, giving it an authentic and nostalgic feel similar to hand-painted concert posters.
+              </li>
+              <br>
+              <br>
+              <a href="our-story.html"  class="nav-link-corporate" ><b>Our Team dynamic carousel</b></a>
+              <li>The carousel design is a dynamic user interface element that serves to engage users by showcasing multiple content items without user input, making efficient use of space and user attention. It automatically slides to offer a glimpse into the 'OUR TEAM' section, presenting team members in a manner that embodies the energy and vibrancy of the hard rock scene. The choice to auto-advance reflects a UX decision to reduce the user's cognitive load, allowing them to passively receive information without additional actions, which can be particularly effective for users accessing the site via mobile devices or users who prefer to browse content with minimal interaction. The monochrome aesthetic of the photographs against the stark, contrasting background aligns with the genre’s traditional visuals, while the splashes of brighter colors in the text and highlights bring focus to key information and maintain the user’s attention as the carousel transitions, providing a visual rhythm that echoes the pulsing beats of rock music.</li>
+              <br>
+              <br>
+              <a href="our-story.html" class="nav-link-corporate" ><b>Popovers with OUR VALUES</b></a>
+              <li>The "OUR VALUES" section's popovers provide an interactive and captivating approach to display content without overwhelming the user while keeping a clean, focused design. This strategy appeals to hard rock fans' exploratory spirit and offers a rewarding informational reveal similar to uncovering hidden gems, making it ideal for the target audience that values authenticity and discovery.</li>
+<br>
+<br>
               <ul>
                 <em><b>How does website design fit the <strong>values and personality of the brand</strong>?</b></em>
                 <br>
