--- a/corporate.html
+++ b/corporate.html
@@ -222,6 +222,9 @@
 <br>
           <br>
           <h4  class="body-text-corporate"><i>Supporting Visuals</i></h4>
+          <p class="body-text-corporate">Two sharp and direct videos,
+            one cutting straight to the core of our identity and where we revel; concerts.
+            another with a thunderous montage of Amplify's hard-rocking values.</p>
           <div class="container-content my-0">
             <video autoplay muted loop id="myVideo">
               <source src="images/landing-page-video.mp4" type="video/mp4">
@@ -329,9 +332,9 @@
               <li>The "OUR VALUES" section's popovers provide an interactive and captivating approach to display content without overwhelming the user while keeping a clean, focused design. This strategy appeals to hard rock fans' exploratory spirit and offers a rewarding informational reveal similar to uncovering hidden gems, making it ideal for the target audience that values authenticity and discovery.</li>
 <br>
 <br>
-              <div>
-                <em><b>How does website design fit the <strong>values and personality of the brand</strong>?</b></em>
-                <br>
+              <ul>
+                <a><b>How does website design fit the <strong>values and personality of the brand</strong>?</b></a>
+                
                 <li> - Regarding the Content and Copywriting aspect, the website’s visual and interactive elements reflect the brand's personality and tone of voice. As stated in the Content part, the tone of voice is PUT IN HERE THE TONE OF VOICE. The visual elements and design of the website add to the tone of voice. </li>
                 <li> - The Amplify brand's values are mirrored in its website design through the use of dynamic imagery and bold, engaging visuals that evoke the excitement of live rock performances. The choice of interactive elements and user-friendly navigation suggests a commitment to accessibility and inclusiveness, inviting users to be part of the Amplify community.</li>
                 <br>
@@ -395,7 +398,7 @@
           <br>
           <h4 id="production-3" class="heading-corporate-1">Testing Report</h4>
           <p><b>Goal: </b>To assess the user-friendliness, accessibility, communication purpose and effectiveness of the website in providing information about the app, its features, team, and values.</p>
-          <div>
+          <ul>
             <br>
             <p><b>Number of testers:</b> 6
               </p>
@@ -516,7 +519,7 @@
                                       <li>On the homepage it would work to see a form of a  gap between the different photos and the information with each photo, so that you get the feeling there is more to see.</li>
            <br>
             <a class="nav-link-corporate" href="https://drive.google.com/drive/folders/1su1HbLlxy5TJFPlpcq9LpjxwFCwqfD_7">Check out Appendix 4 to see the videos of the website testings</a>
-                                    </div>
+                                    </ul>
         </div> 
         <br>
         <br>
