--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&family=Permanent+Marker&family=Rock+Salt&family=RocknRoll+One&display=swap" rel="stylesheet">
-<title>Amplify-Our story</title>
+<title>Amplify-Landing Page</title>
 
 </head> 
 <body class="bg-grey">
